--- a/CSS Assignment 1/styles.css
+++ b/CSS Assignment 1/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: #202020;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,7 +9,8 @@ body {
 
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    padding-left: 200px;
     align-items: center;
     width: 100%;
 }
@@ -18,6 +19,7 @@ body {
     background-color: white;
     border-radius: 10px;
     width: 400px;
+    height: 200px;
     text-align: center;
     position: relative;
     padding: 20px;
@@ -28,10 +30,10 @@ body {
     background-color: #ff1493;
     color: black;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 30px;
     padding: 10px;
     position: absolute;
-    top: -20px;
+    top: -15px;
     left: 50%;
     transform: translateX(-50%);
     border-radius: 5px;
@@ -39,6 +41,6 @@ body {
 
 .card-body {
     margin-top: 40px;
-    font-size: 1em;
-    color: black;
+    font-size: 22px;
+    color: #141314;
 }
