--- a/CSS Assignment 3/styles.css
+++ b/CSS Assignment 3/styles.css
@@ -3,49 +3,60 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #b5b0d0;
+    background-color: #a7a8cd;
     font-family: Arial, sans-serif;
 }
+
 .card {
-    width: 300px;
+    width: 400px;
+    height: 470px;
     background: white;
-    border-radius: 12px;
+    border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     position: relative;
 }
+
 .badge {
-    background: #f9d776;
+    background: #fdf1b5;
     color: #000;
     font-weight: bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 5px 10px;
     border-radius: 5px;
     position: absolute;
     top: 10px;
     left: 10px;
 }
+
 .image-container {
     background: #f3f3f3;
-    padding: 10px;
+
     text-align: center;
 }
+
 .image-container img {
     width: 100%;
-    border-radius: 8px;
+
 }
+
 .content {
     padding: 10px;
 }
+
 .title {
     font-size: 20px;
     font-weight: bold;
+    margin-top: 10px;
 }
+
 .subtitle {
-    font-size: 14px;
+    font-size: 20px;
     color: gray;
 }
+
 .description {
-    font-size: 14px;
-    margin-top: 10px;
+    font-size: 15 px;
+    margin-top: 15px;
     color: #333;
 }
