Fixed Otter Essay

--- a/CSS Assignment 1/styles.css
+++ b/CSS Assignment 1/styles.css
@@ -18,9 +18,9 @@ body {
 .card {
     background-color: white;
     border-radius: 10px;
-    width: 400px;
+    width: 440px;
     height: 200px;
-    text-align: center;
+    text-align: left;
     position: relative;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -30,11 +30,14 @@ body {
     background-color: #ff1493;
     color: black;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 40px;
     padding: 10px;
     position: absolute;
-    top: -15px;
+    text-align: center;
+    top: -30px;
     left: 50%;
+    width: 400px;
+    height: 60px;
     transform: translateX(-50%);
     border-radius: 5px;
 }
