Updated project with latest changes

--- a/CSS Assignment 6/styles.css
+++ b/CSS Assignment 6/styles.css
@@ -1,167 +1,771 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f4f4f4;
-    padding: 50px;
-  }
-  
-  .herosection {
-  
-    width: 1440px;
-    height: 1024px;
-    margin-left: 10%;
-  
-  }
-  
-  .header {
-    display: flex;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  background-color: #f4f4f4;
+  padding: 50px;
+}
 
-    width: 1150px;
-    height: 44px;
-    margin-left: 145.09px;
-    gap: 140px;
-  
-  }
-  
-  .navigations {
-    width: 504px;
-    height: 24px;
-   margin-top: 13px;
-    display: flex;
-    gap: 40px;
-    color: black;
-   
-  
-  }
-  
-  .logo {
-    width: 155px;
-    height: 40px;
-    gap: 8px;
-    padding: 8px;
-    display: flex;
-  
-  }
-  
-  .logo,.img {
-    height: 15px;
-    padding-top: 15px;
-  }
-  
-  .loginbar {
-    
-    display: flex;
-    width: 330px;
-    height: 44px;
-    gap: 24px;
-    color: #0065FE;
-    cursor: pointer;
-  
-  }
-  .login{
-    margin-top: -5px;
-  }
- 
-  
-  button {
-    width: 142px;
-    height: 44px;
-    gap: 10px;
-    border-radius: 100px;
-    padding-top: 12px;
-    padding-right: 24px;
-    padding-bottom: 12px;
-    padding-left: 24px;
-    color: white;
-    border: solid #0065FE;
-    background-color: #0065FE;
-    cursor: pointer;
-  
-  }
-  
-  .optimize {
-    width: 948px;
-    font-size: 22px;
-    height: 300px;
-    margin-top: 100px;
-    margin-left: 246px;
-  }
+.herosection {
 
-  .personalize, p{
-    font-size: 17px;
-    height: 120px;
-  }
+  width: 1440px;
+  height: 1024px;
+  margin-left: 10%;
+}
+
+.header {
+  display: flex;
+
+  width: 1150px;
+  height: 44px;
+  margin-left: 145.09px;
+  gap: 140px;
+
+}
+
+.navigations {
+  width: 504px;
+  height: 24px;
+  margin-top: 13px;
+  display: flex;
+  gap: 40px;
+  color: black;
 
 
-  .highlight {
-    color: #005AE2;
-    position: relative;
-  }
+}
+
+.logo {
+  width: 155px;
+  height: 40px;
+  gap: 8px;
+  padding: 8px;
+  display: flex;
+
+}
+
+.logo img {
+  height: 15px;
+  padding-top: 15px;
+}
+
+.loginbar {
+
+  display: flex;
+  width: 330px;
+  height: 44px;
+  gap: 24px;
+  color: #0065FE;
+  cursor: pointer;
+
+}
+
+.login {
+  margin-top: -5px;
+}
 
 
-  .highlight::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: #005AE2;
-    position: absolute;
-    bottom: -4px;
-    left: 0;}
+button {
+  width: 142px;
+  height: 44px;
+  gap: 10px;
+  border-radius: 100px;
+  padding-top: 12px;
+  padding-right: 24px;
+  padding-bottom: 12px;
+  padding-left: 24px;
+  color: white;
+  background-color: #0065FE;
+  cursor: pointer;
 
-  .seamlesslybox, .img{
-    width: 768px;
-    height: 224px;
-    margin-left: 330px;
-    border-radius: 24px;
-    margin-top: 80px;
-  }
-  
-  .btn {
-    display: inline-block;
-    padding: 12px 24px;
-    font-size: 1em;
-    font-weight: bold;
-    border-radius: 25px;
-    text-decoration: none;
-    transition: 0.3s;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .btn-primary {
-    background-color: #0366d6;
-    color: white;
-  }
-  .btn-primary:hover {
-    background-color: #024ea2;
-  }
-  .btn-secondary {
-    color: #0366d6;
-    background: none;
-  }
-  .btn-secondary:hover {
-    text-decoration: underline;}
-  
-    .invisible-link {
-      text-decoration: none; /* Remove underline */
-      color: inherit; /* Inherit the text color from the parent */
-      cursor: pointer; /* Ensure the cursor changes to a pointer on hover */
-    }
-  
-    .invisible-link:hover {
-      text-decoration: underline; /* Optional: Add underline on hover */
-    }
+}
 
-    .rectangle{
-      width: 1440px;
-      height: 93px;
-      margin-top: 120px;
-    }
-  
-    .ellipse{
-      width: 956px;
-      height: 49px;
-      margin-top: -70px;
-      margin-left: 256px;
-    }
+.optimize {
+  width: 948px;
+  font-size: 23px;
+  height: 350px;
+  margin-top: 100px;
+  margin-left: 246px;
+  font-family: Gilroy;
+}
+
+.personalize p {
+  font-size: 17px;
+  height: 120px;
+  font-family: Gilroy;
+}
+
+
+.highlight {
+  color: #005AE2;
+
+}
+
+.seamlesslybox,
+.img {
+  width: 768px;
+  height: 224px;
+  margin-left: 330px;
+  border-radius: 24px;
+  margin-top: 80px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 12px 24px;
+  font-size: 1em;
+  font-weight: bold;
+  border-radius: 25px;
+  text-decoration: none;
+  transition: 0.3s;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #0366d6;
+  width: 100px;
+  height: auto;
+  color: white;
+}
+
+.btn-primary:hover {
+  background-color: #024ea2;
+}
+
+.btn-secondary {
+  color: #0366d6;
+  background: none;
+}
+
+.btn-secondary:hover {
+  text-decoration: underline;
+}
+
+.invisible-link {
+  text-decoration: none;
+  /* Remove underline */
+  color: inherit;
+  /* Inherit the text color from the parent */
+  cursor: pointer;
+  /* Ensure the cursor changes to a pointer on hover */
+}
+
+.invisible-link:hover {
+  text-decoration: underline;
+  /* Optional: Add underline on hover */
+}
+
+.rectangle {
+  width: 1440px;
+  height: 93px;
+  margin-top: 120px;
+}
+
+.ellipse {
+  width: 956px;
+  height: 49px;
+  margin-top: -70px;
+  margin-left: 256px;
+}
+
+.onestop,
+.img {
+  width: 1440px;
+  height: 220px;
+  margin-left: 10%;
+
+}
+
+.whybox {
+  width: 1202.1px;
+  height: 504px;
+  top: 348px;
+  margin-left: 16%;
+  gap: 96px;
+  display: flex;
+
+}
+
+.whychoose {
+  width: 398.1px;
+  height: 256px;
+  gap: 16px;
+
+}
+
+.whyheading h2 {
+  font-size: 33px;
+  margin-top: 0;
+  font-family: Gilroy;
+}
+
+.highlightS {
+  color: #005ae2;
+
+}
+
+.ScissorsP p {
+  width: 370px;
+  height: 192px;
+  font-size: 16px;
+  margin-left: 25px;
+  margin-top: -20px;
+  text-align: left;
+  line-height: 28px;
+  font-family: Gilroy;
+
+}
+
+.urlbox {
+  width: 708px;
+  height: 504px;
+}
+
+.urlbox1 {
+  width: 708px;
+  height: 220px;
+  margin-bottom: 50px;
+  gap: 28px;
+  display: flex;
+  gap: 28px;
+  /*come back here*/
+}
+
+.urlbox1-1 {
+  width: 340px;
+  height: 220px;
+  gap: 40px;
+  margin-bottom: 0;
+
+}
+
+.urlbox1-1 img {
+  width: 56px;
+  height: 56px;
+  display: block;
+
+}
+
+.urlheading p {
+  font-size: 20px;
+  height: 28px;
+  text-align: left;
+  font-family: Gilroy;
+}
+
+.urlP p {
+  text-align: left;
+  font-size: 16px;
+  width: auto;
+  height: 80px;
+  font-family: Gilroy;
+
+}
+
+.custombox {
+  width: 340px;
+  height: 211px;
+  gap: 40px;
+}
+
+.custombox img {
+  width: 56px;
+  height: 56px;
+  display: block;
+
+}
+
+.customH p {
+  font-size: 20px;
+  height: 28px;
+  text-align: left;
+  font-family: Gilroy;
+
+}
+
+.customP p {
+  text-align: left;
+  font-size: 16px;
+  width: auto;
+  height: 80px;
+  font-family: Gilroy;
+}
+
+.qrbox {
+  width: 340px;
+  height: 220px;
+  gap: 40px;
+}
+
+.qrbox1 img {
+  width: 56px;
+  height: 56px;
+  gap: 40px;
+  display: block;
+
+}
+
+.qrheading p {
+  font-family: Gilroy;
+  width: auto;
+  height: 28px;
+
+  text-align: left;
+  font-size: 20px;
+
+}
+
+.qrP {
+  text-align: left;
+  width: 340px;
+  height: 80px;
+
+
+}
+
+.qrP p {
+  text-align: left;
+  font-size: 16px;
+  width: auto;
+  height: 80px;
+  font-family: Gilroy;
+}
+
+.urlbox2 {
+  width: 708px;
+  height: 220px;
+  gap: 28px;
+  display: flex;
+}
+
+.databox {
+  width: 340px;
+  height: 220px;
+  gap: 40px;
+
+}
+
+.databox1 img {
+  width: 56px;
+  height: 56px;
+  gap: 40px;
+  display: block;
+
+}
+
+.dataheading p {
+  width: 218px;
+  height: 28px;
+  text-align: left;
+  padding-left: 5px;
+  font-size: 20px;
+  font-family: Gilroy;
+}
+
+.dataP p {
+  text-align: left;
+  font-size: 16px;
+  width: auto;
+  height: 80px;
+  font-family: Gilroy;
+}
+
+.desktop1 {
+  width: 1440px;
+  height: 1024px;
+  margin-left: 10%;
+}
+
+.pricebox {
+  width: 576.1px;
+  height: 108px;
+  margin-top: 0px;
+  margin-left: 432px;
+  gap: 16px;
+  display: flex;
+  margin-top: 120px;
+}
+
+.pricebox img {
+  width: 5px;
+  height: 48px;
+  border-width: 5px;
+  display: block;
+
+}
+
+.pricebox2 {
+  width: 560px;
+  height: 108px;
+  gap: 8px;
+  margin: 0;
+}
+
+.priceheading p {
+  width: auto;
+  height: 48px;
+  margin: 0;
+  font-size: 37px;
+  line-height: 48px;
+  text-align: left;
+  font-family: Gilroy;
+}
+
+.priceP p {
+  margin-top: 0;
+  line-height: 24px;
+  text-align: center;
+  font-family: Gilroy;
+}
+
+.pricingplan {
+  width: 1088px;
+  height: 627px;
+  margin-top: 100px;
+  margin-left: 176px;
+  border-radius: 12px;
+  display: flex;
+
+}
+
+.basicplan {
+  width: 379px;
+  height: 455px;
+  margin-top: 150px;
+  border-radius: 12px;
+  border-width: 0.4px;
+
+}
+
+.proplanbox {
+  width: 410px;
+  height: 627px;
+  top: 218px;
+  left: 515px;
+  border-radius: 12px;
+  color: white;
+  background-color: rgba(30, 52, 72, 1);
+
+}
+
+.teamsbox {
+  width: 379px;
+  height: 455px;
+  margin-top: 150px;
+  border-radius: 12px;
+  border-width: 0.4px;
+}
+
+.proplanbox p {
+  width: 131px;
+  height: 32px;
+  margin-top: 95px;
+  margin-left: 65px;
+  font-size: 20px;
+  line-height: 32px;
+
+}
+
+.proplan {
+  width: 239px;
+  height: 328px;
+  top: 151px;
+  margin-left: 65px;
+  gap: 24px;
+}
+
+.proprice {
+  width: 239px;
+  height: 88px;
+  gap: 8px;
+
+}
+
+
+
+.priceperM p {
+  text-align: left;
+  margin: 0;
+  width: 200px;
+  height: 48px;
+  font-size: 30px;
+  font-family: Gilroy;
+
+}
+
+.ideal {
+  width: 239px;
+  height: 32px;
+
+}
+
+.ideal p {
+  margin: 0;
+  width: 239px;
+  height: 32px;
+  text-align: left;
+  font-family: Gilroy;
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 0%;
+
+}
+
+.proplan img {
+  width: 180px;
+  height: 186px;
+  gap: 24px;
+  display: block;
+  margin-top: 20px;
+
+}
+
+.priceoptionbox {
+  display: flex;
+  width: 412px;
+  height: 48px;
+  margin-top: 50px;
+  margin-left: 514px;
+  gap: 12px;
+
+}
+
+.priceoption1 button {
+  background-color: white;
+  color: rgba(0, 101, 254, 1);
+  width: 200px;
+  height: 48px;
+  border-radius: 100px;
+  gap: 10px;
+  border-width: 1px;
+  padding-top: 12px;
+  padding-right: 24px;
+  padding-bottom: 12px;
+  padding-left: 24px;
+
+}
+
+.priceoption2 button {
+  width: 200px;
+  height: 48px;
+  border-radius: 100px;
+  gap: 10px;
+  border-width: 1px;
+  padding-top: 12px;
+  padding-right: 24px;
+  padding-bottom: 12px;
+  padding-left: 24px;
+}
+
+.desktop2 {
+  width: 1440px;
+  height: 520px;
+  margin-left: 10%;
+  background-color: rgba(30, 52, 72, 1);
+  position: relative;
+}
+
+.decobox1 {
+  width: 1272.5px;
+  height: 0;
+  transform: rotate(0deg);
+  margin-left: -150px;
+  opacity: 50%;
+}
+
+.decobox2 {
+  margin-left: 36%;
+  opacity: 70%;
+
+}
+
+.trim_urlbox {
+  position: absolute;
+  width: 476px;
+  height: 355px;
+  left: 482px;
+  top: 83.5px;
+  background: #FFFFFF;
+  border-radius: 12px;
+}
+
+.pastebox {
+  width: 392px;
+  height: 127px;
+  margin-top: 42px;
+  margin-left: 42px;
+  gap: 24px;
+
+
+}
+
+.trimurl {
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+
+  position: absolute;
+  width: 392px;
+  height: auto;
+  left: 42px;
+  top: 193px;
+
+}
+
+.trimurl button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  gap: 10px;
+
+  width: 392px;
+  height: 48px;
+
+  /* Primary/400 */
+  background: #005AE2;
+  border-radius: 100px;
+
+}
+
+.trimP {
+  padding: 10px;
+  gap: 10px;
+  width: auto;
+  height: 45px;
+}
+
+.trimP p {
+  width: 373px;
+  height: 40px;
+  font-family: 'Gilroy';
+  text-align: left;
+  font-size: 14px;
+  color: #3284FF;
+  margin-top: 0px;
+
+}
+.faqs{
+position: relative;
+width: 1440px;
+height: 1153px;
+margin-left: 10%;
+border: solid green;
+background: #FFFFFF;
+
+}
+
+.faqsbox{
+  /* Frame 1000001653 */
+
+/* Auto layout */
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 0px;
+gap: 64px;
+
+position: absolute;
+width: 792px;
+height: 955px;
+left: calc(50% - 792px/2);
+top: 43px;
+border: solid orange;
+
+
+}
+.faqsHeading{
+  /* Frame 1000001652 */
+
+/* Auto layout */
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 16px;
+border: solid grey;
+width: 112.1px;
+height: 48px;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+
+.faqsHeading p{
+  width: 96px;
+height: 32px;
+font-family: Gilroy;
+font-size: 40px;
+line-height: 32px;
+letter-spacing: 0%;
+
+
+}
+.content1{
+  /* Frame 73 */
+
+/* Auto layout */
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 0px;
+gap: 16px;
+border: solid grey;
+width: 792px;
+height: 127px;
+
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+.content1Heading{
+  /* Frame 72 */
+
+/* Auto layout */
+display: flex;
+text-align: left;
+
+gap: 40px;
+width: 792px;
+height: 32px;
+
+/* Inside auto layout */
+flex: none;
+order: 0;
+align-self: stretch;
+flex-grow: 0;
+
+
+}
+.content1Heading p{
+  width: 744px;
+height: 32px;
+margin: 0;
+}
+
+.content1P{
+  width: 792px;
+height: 63px;
+text-align: left;
+
+}
+.content1Img{
+  /* minus */
+width: 24px;
+height: 24px;
+
+/* Inside auto layout */
+flex: none;
+order: 1;
+flex-grow: 0;
+}
